@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-21T08:29:43Z",
+  "timestamp" : "2022-04-23T08:26:16Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 115,
-  "uniques" : 36,
+  "count" : 116,
+  "uniques" : 37,
   "clones" : [
     {
       "timestamp": "2022-04-15T00:00:00Z",
@@ -35,6 +35,13 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
