@@ -1,5 +1,5 @@
 {
-  "count": 115,
+  "count": 116,
   "uniques": 20,
   "clones": [
     {
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
