@@ -1,3 +1,9 @@
+2022-04-23T08:26:16Z:
+* notice: last 14d: all unq: 116 20
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 115 36
+* notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 116 37
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-21T08:29:43Z:
 * notice: last 14d: all unq: 115 20
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 114 35
